...
  }

  /// Constructor from a SQLite row
  factory Event.fromJson(final MyJson row) {
    return Event(
      id: row.getInt('Id', -1),
      name: row.getString('Name'),
      categoryId: row.getInt('Category', -1),
      dateBegin: row.getDate('Begin'),
      dateEnd: row.getDate('End'),
      people: row.getString('People'),
      memo: row.getString('Memo'),
    );
...
          );
        },
  );

  /// Date Begin
  FieldDate fieldDateBegin = _createDateField(
    'Begins',
    'Begin',
    (Event event) => event.fieldDateBegin,
  );

  /// Date End
  FieldDate fieldDateEnd = _createDateField(
...
