...
          header: buildHeaderTitleAndCounter(
            context,
            title,
            '${getIntAsText(lineCount)} lines',
          ),
          child: TextField(
            key: const Key('key_input_text_field_value'),
            controller: controller,
            // focusNode: focusNode,
            autofocus: false,
            maxLines: null,
            keyboardType: TextInputType.multiline,
            textAlignVertical: TextAlignVertical.top,
...
