...
    name: 'Food',
    type: CategoryType.expense,
    color: '#FFFF22FF',
  );
  final Category foodGrocery = Data().categories.addNewCategory(
    parentId: food.uniqueId,
    name: 'Grocery',
    type: CategoryType.recurringExpense,
  );
  final Category foodRestaurant = Data().categories.addNewCategory(
    parentId: food.uniqueId,
    name: 'Restaurant',
    type: CategoryType.recurringExpense,
...
